fix: restructure privacy policy h2 positions and adjust global h2 spacing

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -36,7 +36,7 @@
   }
 
   h2 {
-    @apply relative inline-block mb-6 text-[1.8rem] font-bold text-primary;
+    @apply relative inline-block mb-8 text-[1.8rem] font-bold text-primary;
   }
 
   h2::after {
